fix: keep install result receiver compatible with older Android runtimes